--- a/templates/room.html
+++ b/templates/room.html
@@ -20,9 +20,9 @@
                     <input type="hidden" name="id" value="" />
                     <textarea name="value" rows="6" cols="10"></textarea>
                     <p class="error"></p>
-                    <button type="submit">Save</button>
                     <button type="reset">Cancel</button>
                     <button type="reset" class="remove">Remove</button>
+                    <button type="submit">Save</button>
                 </form>
             </template>
             <template id="chat-message-template">
@@ -31,43 +31,46 @@
                     <span class="text"></span>
                 </li>
             </template>
-            <div class="bg">{{ template "nav.html" . }}</div>
-            <section class="player-block bg">
-                <div class="player{{- if .Meta.HasVideo}} has-video{{end -}}
-                                  {{- if .Meta.HasAudio}} has-audio{{end -}}" data-status="stopped">
-                    {{- /* `video` with `height: auto` will always use the default aspect ratio.
-                        so instead we enforce the size of this element with an empty image. */}}
-                    <svg width="{{or .Meta.Width 853}}" height="{{or .Meta.Height 480}}"></svg>
-                    <video crossorigin="anonymous"></video><div class="controls">
-                        <a href="#" class="button icon play" title="Play">&#xf04b;</a>
-                        <a href=""  class="button icon reload" title="Reload">&#xf021;</a>
-                        <a href="#" class="button icon stop" title="Stop">&#xf04c;</a>
-                        <a href="#" class="button icon mute" title="Mute">&#xf028;</a>
-                        <a href="#" class="button icon unmute" title="Unmute">&#xf026;</a>
-                        <div tabindex="0" class="volume" title="Volume"><div class="slider"></div></div>
-                        <div class="status">not connected</div>
-                        <a href="#" class="button icon theatre" title="Theatre mode">&#xf065;</a>
-                        <a href="#" class="button icon fullscreen" title="Fullscreen">&#xf0b2;</a>
-                        <a href="#" class="button icon collapse" title="Normal view">&#xf066;</a>
+            <div class="bg">
+                {{ template "nav.html" . }}
+                <section class="player-block bg">
+                    <div class="player{{- if .Meta.HasVideo}} has-video{{end -}}
+                                      {{- if .Meta.HasAudio}} has-audio{{end -}}" data-status="stopped">
+                        {{- /* `video` with `height: auto` will always use the default aspect ratio.
+                            so instead we enforce the size of this element with an empty image. */}}
+                        <svg width="{{or .Meta.Width 853}}" height="{{or .Meta.Height 480}}"></svg>
+                        <video crossorigin="anonymous"></video><div class="controls">
+                            <a href="#" class="button icon play" title="Play">&#xf04b;</a>
+                            <a href=""  class="button icon reload" title="Reload">&#xf021;</a>
+                            <a href="#" class="button icon stop" title="Stop">&#xf04c;</a>
+                            <a href="#" class="button icon mute" title="Mute">&#xf028;</a>
+                            <a href="#" class="button icon unmute" title="Unmute">&#xf026;</a>
+                            <div tabindex="0" class="volume" title="Volume"><div class="slider"></div></div>
+                            <div class="status">not connected</div>
+                            <a href="#" class="button icon theatre" title="Theatre mode">&#xf065;</a>
+                            <a href="#" class="button icon fullscreen" title="Fullscreen">&#xf0b2;</a>
+                            <a href="#" class="button icon collapse" title="Normal view">&#xf066;</a>
+                        </div>
                     </div>
-                </div>
-                <div class="chat-tab"></div>
-                <aside class="chat">
-                    <h1>#{{.ID}}</h1>
-                    <ul class="log" data-scrollbar></ul>
-                    <div class="error-message"></div>
-                    <div class="offline-message">The chat is offline.</div>
-                    <form class="login-form">
-                        <textarea tabindex="1" class="input" cols="1" rows="1" placeholder="What's your name?"></textarea>
-                        <a href="#" class="button icon join" title="Join" data-submit>&#xf090;</a>
-                    </form>
-                    <form class="input-form">
-                        <textarea tabindex="1" class="input" cols="1" rows="1"></textarea>
-                        <a href="#" class="button icon ins-emoji" title="Emoji...">&#xf118;</a>
-                        <a href="#" class="button icon send" title="Send" data-submit>&#xf1d8;</a>
-                    </form>
-                </aside>
-            </section>
+                    <div class="chat-tab"></div>
+                    <aside class="chat">
+                        <h1>#{{.ID}}</h1>
+                        <ul class="log" data-scrollbar></ul>
+                        <div class="offline-message">The chat is offline.</div>
+                        <form class="login-form">
+                            <textarea tabindex="1" class="input" cols="1" rows="1" placeholder="What's your name?"></textarea>
+                            <p class="error"></p>
+                            <a href="#" class="button icon join" title="Join" data-submit>&#xf090;</a>
+                        </form>
+                        <form class="input-form">
+                            <textarea tabindex="1" class="input" cols="1" rows="1"></textarea>
+                            <p class="error"></p>
+                            <a href="#" class="button icon ins-emoji" title="Emoji...">&#xf118;</a>
+                            <a href="#" class="button icon send" title="Send" data-submit>&#xf1d8;</a>
+                        </form>
+                    </aside>
+                </section>
+            </div>
             <section class="stream-header user-header">
                 <img width="60" height="60" src="{{.Meta.Avatar 60}}" alt="{{.ID}}" />
                 <div>
@@ -101,7 +104,7 @@
                 </div>
             {{- end }}
             {{- if .Meta.UserAbout }}
-                <div class="stream-owner" data-tab="owner" data-tab-title="About them">
+                <div class="panel" data-tab="owner" data-tab-title="About them">
                     <p data-markup>{{.Meta.UserAbout}}</p>
                 </div>
             {{- end }}
@@ -109,7 +112,6 @@
             {{ template "footer.html" }}
             <script src="/static/js/vendored.min.js"></script>
             <script src="/static/js/global.js"></script>
-            <script src="/static/js/markup.js"></script>
             <script src="/static/js/room.js"></script>
         </div>
     </body>
