--- a/templates/form-user-login.html
+++ b/templates/form-user-login.html
@@ -1,6 +1,6 @@
 <div class="form-wrapper">
     <h2 data-tab="login">Log in</h2>
-    <form method="POST" action="/user/login" data-xhrable>
+    <form method="POST" action="/user/login">
         <label>Username</label>
         <input name="username" type="text" required />
         <label>Password</label>
