--- a/templates/form-user-new.html
+++ b/templates/form-user-new.html
@@ -1,6 +1,6 @@
 <div class="form-wrapper">
-    <h2 data-tab="signup">Sign up</h2>
-    <form method="POST" action="/user/new" data-xhrable>
+    <h2 data-tab="new">Sign up</h2>
+    <form method="POST" action="/user/new">
         <label>Username</label>
         <input name="username" type="text" required />
         <label>Password</label>
