--- a/templates/form-user-restore.html
+++ b/templates/form-user-restore.html
@@ -1,6 +1,6 @@
 <div class="form-wrapper">
     <h2 data-tab="restore">Password reset</h2>
-    <form method="POST" action="/user/reset" data-xhrable>
+    <form method="POST" action="/user/reset">
         <label>Username</label>
         <input name="username" type="text" />
         <p class="notice">&mdash; or &mdash;</p>
