--- a/templates/user-new.html
+++ b/templates/user-new.html
@@ -7,10 +7,10 @@
         <title>webmcast // sign up</title>
     </head>
     <body>
-        <div data-scrollbar>
+        <main data-scrollbar>
             {{ template "nav.html" }}
             {{ template "form-user-new.html" }}
             {{ template "footer.html" }}
-        </div>
+        </main>
     </body>
 </html>
