--- a/templates/user-restore.html
+++ b/templates/user-restore.html
@@ -7,10 +7,10 @@
         <title>webmcast // password reset</title>
     </head>
     <body>
-        <div data-scrollbar>
+        <main data-scrollbar>
             {{ template "nav.html" }}
             {{ template "form-user-restore.html" }}
             {{ template "footer.html" }}
-        </div>
+        </main>
     </body>
 </html>
