--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,6 +1,6 @@
 <nav>
     <a href="/" class="brand">webmcast</a>
-    <span class="spacer"></span>
+    <x-spacer></x-spacer>
 {{- if .User }}
     <span>Hi, <a href="/user/">{{.User.Login}}</a>.</span>
     <a href="/user/logout">Log out</a>
@@ -10,9 +10,9 @@
 {{- end }}
 </nav>
 <template id="login-form-template">
-    <div data-tabs="login" data-modal>
+    <x-modal data-tabs>
         {{ template "form-user-login.html" }}
         {{ template "form-user-new.html" }}
         {{ template "form-user-restore.html" }}
-    </div>
+    </x-modal>
 </template>
