--- a/templates/nav.html
+++ b/templates/nav.html
@@ -10,7 +10,7 @@
 {{- end }}
 </nav>
 <template id="login-form-template">
-    <x-modal data-tabs>
+    <x-modal data-tabs data-scrollbar>
         {{ template "form-user-login.html" }}
         {{ template "form-user-new.html" }}
         {{ template "form-user-restore.html" }}
