--- a/templates/form-user-login.html
+++ b/templates/form-user-login.html
@@ -1,12 +1,10 @@
-<div class="form-wrapper">
-    <h2 data-tab="login">Log in</h2>
-    <form method="POST" action="/user/login">
-        <label>Username</label>
-        <input name="username" type="text" required />
-        <label>Password</label>
-        <input name="password" type="password" required />
-        <p class="error"></p>
-        <a href="/user/restore">Trouble logging in?</a>
-        <button type="submit">Log in</button>
-    </form>
-</div>
+<form method="POST" class="form-wrapper" action="/user/login" data-tab="/user/login">
+    <h2 data-tab-title>Log in</h2>
+    <label>Username</label>
+    <input name="username" type="text" required />
+    <label>Password</label>
+    <input name="password" type="password" required />
+    <p class="error"></p>
+    <a href="/user/restore">Trouble logging in?</a>
+    <button type="submit">Log in</button>
+</form>
