--- a/templates/form-user-new.html
+++ b/templates/form-user-new.html
@@ -1,15 +1,13 @@
-<div class="form-wrapper">
-    <h2 data-tab="new">Sign up</h2>
-    <form method="POST" action="/user/new">
-        <label>Username</label>
-        <input name="username" type="text" required />
-        <label>Password</label>
-        <input name="password" type="password" required />
-        <label>Email</label>
-        <input name="email" type="email" required />
-        {{/* todo: recaptcha, tos, privacy policy */}}
-        <p class="notice">By signing up you agree blah-blah-blah...</p>
-        <p class="error"></p>
-        <button type="submit">Sign up</button>
-    </form>
-</div>
+<form method="POST" class="form-wrapper" action="/user/new" data-tab="/user/new">
+    <h2 data-tab-title>Sign up</h2>
+    <label>Username</label>
+    <input name="username" type="text" required />
+    <label>Password</label>
+    <input name="password" type="password" required />
+    <label>Email</label>
+    <input name="email" type="email" required />
+    {{/* todo: recaptcha, tos, privacy policy */}}
+    <p class="notice">By signing up you agree blah-blah-blah...</p>
+    <p class="error"></p>
+    <button type="submit">Sign up</button>
+</form>
