--- a/templates/user-config.html
+++ b/templates/user-config.html
@@ -33,38 +33,34 @@
             </section>
         {{- end }}
             <section class="row">
-                <div class="form-wrapper">
-                    <form method="POST" action="/user/new-token">
-                        <label>Your avatar is provided by Gravatar.</label>
-                        <span class="notice">
-                            Visit <a href="https://gravatar.com/">gravatar.com</a> to change it.
-                        </span>
-                        <label>Your authentication token is</label>
-                        <input type="text" value="{{.User.StreamToken}}" readonly />
-                        <span class="notice">
-                            It's at the end of the "Publish" URL. Think it might have been compromised?
-                        </span>
-                        <button type="submit">Get a new token</button>
-                    </form>
-                </div>
-                <div class="form-wrapper">
-                    <form method="POST" action="">
-                        <label>Old password</label>
-                        <input name="password-old" type="password" placeholder="Required to change anything." />
-                        <label>Username</label>
-                        <input name="username" type="text" placeholder="{{.User.Login}}" />
-                        <label>Display name</label>
-                        <input name="displayname" type="text" placeholder="{{.User.Name}}" />
-                        <label>Email</label>
-                        <input name="email" type="email" placeholder="{{.User.Email}}" />
-                        <label>New password</label>
-                        <input name="password" type="password" placeholder="Leave empty to keep the old one." />
-                        <label>About yourself</label>
-                        <textarea name="about" rows="6">{{.User.About}}</textarea>
-                        <span class="error"></span>
-                        <button type="submit">Update</button>
-                    </form>
-                </div>
+                <form method="POST" class="form-wrapper" action="/user/new-token">
+                    <label>Your avatar is provided by Gravatar.</label>
+                    <span class="notice">
+                        Visit <a href="https://gravatar.com/">gravatar.com</a> to change it.
+                    </span>
+                    <label>Your authentication token is</label>
+                    <input type="text" value="{{.User.StreamToken}}" readonly />
+                    <span class="notice">
+                        It's at the end of the "Publish" URL. Think it might have been compromised?
+                    </span>
+                    <button type="submit">Get a new token</button>
+                </form>
+                <form method="POST" class="form-wrapper" action="">
+                    <label>Old password</label>
+                    <input name="password-old" type="password" placeholder="Required to change anything." />
+                    <label>Username</label>
+                    <input name="username" type="text" placeholder="{{.User.Login}}" />
+                    <label>Display name</label>
+                    <input name="displayname" type="text" placeholder="{{.User.Name}}" />
+                    <label>Email</label>
+                    <input name="email" type="email" placeholder="{{.User.Email}}" />
+                    <label>New password</label>
+                    <input name="password" type="password" placeholder="Leave empty to keep the old one." />
+                    <label>About yourself</label>
+                    <textarea name="about" rows="6">{{.User.About}}</textarea>
+                    <span class="error"></span>
+                    <button type="submit">Update</button>
+                </form>
             </section>
             {{ template "footer.html" }}
             <script src="/static/js/global.js"></script>
